--- a/MidiConvert/.docker/Dockerfile
+++ b/MidiConvert/.docker/Dockerfile
@@ -8,4 +8,4 @@ COPY ./requirements.txt /workspace/
 
 RUN python3 -m pip install -r /workspace/requirements.txt
 
-CMD ["python3", "midiConverter.py"]
+CMD ["python3", "midiConverter_full.py", "midiAngeloConversions.py", "midi_tempo_adjuster.py", "audio_volume_adjuster.py", "midi_to_audio_conversion.py"]
