fixed the docker file so that it installs ffmpeg, fixed up the audio conversion code. DB BOOST NEEDS FIXING

--- a/MidiConvert/Dockerfile
+++ b/MidiConvert/Dockerfile
@@ -3,10 +3,9 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-RUN python3 -m pip install --upgrade pip \
-    && apt-get update \
-    && apt-get install -y fluidsynth \
-    && apt-get install -y ffmpeg
+RUN apt-get update && apt-get install -y ffmpeg
+
+RUN python3 -m pip install --upgrade pip && apt-get update && apt-get install -y fluidsynth 
 
 COPY ./requirements.txt /workspace/
 
